--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="ko">
 <head>
   <link rel="manifest" href="manifest.json">
-<script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3600890134957135 crossorigin="anonymous"></script>
+  <script>
 if ("serviceWorker" in navigator) {
   navigator.serviceWorker.register("sw.js");
 }
