--- a/index.html
+++ b/index.html
@@ -85,7 +85,18 @@ if ("serviceWorker" in navigator) {
             <tbody></tbody>
           </table>
         </article>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3600890134957135"
+     crossorigin="anonymous"></script>
+<!-- quiettimer -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-3600890134957135"
+     data-ad-slot="2736365938"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
         <!-- 카운트다운 -->
         <article class="card">
           <h2>카운트다운</h2>
