--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@ if ("serviceWorker" in navigator) {
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>QuietTimer — 무소음 스톱워치 & 카운트다운</title>
-  <meta name="description" content="소리 없이 작업 시간을 재는 무료 스톱워치 & 카운트다운 웹앱. 기록은 로컬 저장소에만 저장됩니다.">
+  <meta name="description" content="무소음 타이머(QuietTimer) — 소리 없이 작업 시간을 재는 무료 스톱워치와 카운트다운 타이머. 기록은 내 기기에만 저장됩니다.">
+  <meta name="keywords" content="무소음 타이머, 스톱워치, 카운트다운, 온라인 타이머, 조용한 타이머, QuietTimer">
 
   <style>
     /* ===== 색/레이아웃(라이트/다크 대응) ===== */
