--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="ko">
 <head>
+  <meta name="google-site-verification" content="bKCmTnTntviDHLvqQMo99tuGOyddNbqX9r3vTvc-AXI" />
   <link rel="manifest" href="manifest.json">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3600890134957135" crossorigin="anonymous"></script>
   <script>
