--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@ if ("serviceWorker" in navigator) {
 }
 </script>
   <meta charset="utf-8" />
+  <meta name="google-adsense-account" content="ca-pub-3600890134957135">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>QuietTimer — 무소음 스톱워치 & 카운트다운</title>
   <meta name="description" content="무소음 타이머(QuietTimer) — 소리 없이 작업 시간을 재는 무료 스톱워치와 카운트다운 타이머. 기록은 내 기기에만 저장됩니다.">
