Update and rename index-bkp.html to index.html

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <h2>스폰서</h2>
     <ins class="adsbygoogle"
          data-ad-client="ca-pub-3600890134957135"
-         data-ad-slot="DATA-AD-SLOT-HERE"
+         data-ad-slot="8041446505"
          data-ad-format="auto"
          data-full-width-responsive="true"></ins>
     <script>(adsbygoogle=window.adsbygoogle||[]).push({});</script>
