--- a/privacy.html
+++ b/privacy.html
@@ -6,6 +6,6 @@
 <h2>쿠키</h2>
 <p>광고 제공 및 트래픽 분석을 위해 쿠키가 사용될 수 있습니다. 사용자는 브라우저 설정에서 쿠키를 차단/삭제할 수 있습니다.</p>
 <h2>연락처</h2>
-<p>문의: <a href="mailto:contact@quiettimer.app">contact@quiettimer.app</a></p>
+<p>문의: <a href="mailto:ranghaesa6@gmail.com">ranghaesa6@gmail.com</a></p>
 <p><a href="/">← 홈으로</a></p>
 </main></body></html>
