--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <link rel="icon" href="/icon-192.png" sizes="192x192">
   <link rel="icon" href="/icon-512.png" sizes="512x512">
   <link rel="canonical" href="https://ranghaesa.github.io/">
+  <link rel="stylesheet" href="theme-couple.css">
+
 
   <!-- AdSense: client ID만 넣고, 슬롯은 아래 <ins>에서 교체 -->
   <script async
@@ -33,7 +35,7 @@
     small{color:#9aa}
   </style>
 </head>
-<body>
+<body class="couple">
 <header class="row" style="justify-content:space-between;align-items:center">
   <div class="row">
     <strong>QuietTimer</strong>
