--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   }
   </script>
 
-  <!-- AdSense -->
+  <!-- AdSense (손대지 않음) -->
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3600890134957135" crossorigin="anonymous"></script>
 
   <style>
@@ -44,112 +44,135 @@
     table{width:100%;border-collapse:collapse}
     th,td{border-top:1px solid #222;padding:8px;text-align:left}
     small{color:#9aa}
+    .lang-buttons{gap:6px; margin-top:6px;}
   </style>
 </head>
 <body class="couple">
 <header class="row" style="justify-content:space-between;align-items:center">
-  <div class="row">
-    <strong>QuietTimer</strong>
-    <nav>
-      <a href="/">홈</a>
-      <a href="/about.html">소개</a>
-      <a href="/guide.html">사용법</a>
-      <a href="/faq.html">FAQ</a>
-      <a href="/blog/pomodoro.html">포모도로</a>
-      <a href="/blog/focus-habits.html">집중 습관</a>
-      <a href="/privacy.html">개인정보</a>
-      <a href="/terms.html">약관</a>
-      <a href="/contact.html">문의</a>
-    </nav>
+  <div>
+    <div class="row">
+      <strong>QuietTimer</strong>
+      <nav>
+        <a href="/" data-i18n="nav_home">홈</a>
+        <a href="/about.html" data-i18n="nav_about">소개</a>
+        <a href="/guide.html" data-i18n="nav_guide">사용법</a>
+        <a href="/faq.html" data-i18n="nav_faq">FAQ</a>
+        <a href="/blog/pomodoro.html" data-i18n="nav_pomodoro">포모도로</a>
+        <a href="/blog/focus-habits.html" data-i18n="nav_focus">집중 습관</a>
+        <a href="/privacy.html" data-i18n="nav_privacy">개인정보</a>
+        <a href="/terms.html" data-i18n="nav_terms">약관</a>
+        <a href="/contact.html" data-i18n="nav_contact">문의</a>
+      </nav>
+    </div>
+    <!-- 언어 버튼 -->
+    <div class="row lang-buttons">
+      <button class="btn" type="button" onclick="setLanguage('ko')">한국어</button>
+      <button class="btn" type="button" onclick="setLanguage('zh')">中文</button>
+      <button class="btn" type="button" onclick="setLanguage('ja')">日本語</button>
+    </div>
   </div>
 </header>
 
 <main>
   <section class="card">
-    <h1>무소음 타이머</h1>
-    <p class="muted">소리 없이 작업 시간을 측정하는 스톱워치 & 카운트다운</p>
+    <h1 data-i18n="h1_main">무소음 타이머</h1>
+    <p class="muted" data-i18n="p_subtitle">소리 없이 작업 시간을 측정하는 스톱워치 & 카운트다운</p>
 
     <div class="grid grid-2">
       <div class="card">
-        <h2>스톱워치</h2>
+        <h2 data-i18n="stopwatch_title">스톱워치</h2>
         <div id="stopwatch" style="font-size:2rem">00:00:00.00</div>
-        <input id="task" placeholder="작업 이름" aria-label="작업 이름" />
+        <input id="task" placeholder="작업 이름" aria-label="작업 이름" data-i18n-placeholder="task_placeholder" />
+
         <div class="row">
-          <button class="btn" id="sw-start">시작</button>
-          <button class="btn" id="sw-pause">일시정지</button>
-          <button class="btn" id="sw-lap">랩</button>
-          <button class="btn" id="sw-reset">초기화</button>
-          <button class="btn" id="sw-export">CSV 내보내기</button>
+          <button class="btn" id="sw-start" data-i18n="sw_start">시작</button>
+          <button class="btn" id="sw-pause" data-i18n="sw_pause">일시정지</button>
+          <button class="btn" id="sw-lap" data-i18n="sw_lap">랩</button>
+          <button class="btn" id="sw-reset" data-i18n="sw_reset">초기화</button>
+          <button class="btn" id="sw-export" data-i18n="sw_export">CSV 내보내기</button>
         </div>
-        <table id="laps"><thead><tr><th>시간</th><th>랩</th><th>작업 시각</th></tr></thead><tbody></tbody></table>
+        <table id="laps">
+          <thead>
+            <tr>
+              <th data-i18n="th_time">시간</th>
+              <th data-i18n="th_lap">랩</th>
+              <th data-i18n="th_at">작업 시각</th>
+            </tr>
+          </thead>
+          <tbody></tbody>
+        </table>
       </div>
 
       <div class="card">
-        <h2>카운트다운</h2>
+        <h2 data-i18n="countdown_title">카운트다운</h2>
         <div style="font-size:2rem" id="countdown">25:00.00</div>
         <div class="row">
-          <label>분 <input id="cd-min" type="number" value="25" min="0" style="width:80px"></label>
-          <label>초 <input id="cd-sec" type="number" value="0"  min="0" max="59" style="width:80px"></label>
-          <label><input id="vibrate" type="checkbox"> 진동</label>
-          <label><input id="notify"  type="checkbox"> 데스크톱 알림</label>
+          <label><span data-i18n="label_min">분</span> <input id="cd-min" type="number" value="25" min="0" style="width:80px"></label>
+          <label><span data-i18n="label_sec">초</span> <input id="cd-sec" type="number" value="0"  min="0" max="59" style="width:80px"></label>
+          <label><input id="vibrate" type="checkbox"> <span data-i18n="label_vibrate">진동</span></label>
+          <label><input id="notify"  type="checkbox"> <span data-i18n="label_notify">데스크톱 알림</span></label>
         </div>
         <div class="row">
-          <button class="btn" id="cd-start">시작</button>
-          <button class="btn" id="cd-pause">일시정지</button>
-          <button class="btn" id="cd-reset">초기화</button>
+          <button class="btn" id="cd-start" data-i18n="cd_start">시작</button>
+          <button class="btn" id="cd-pause" data-i18n="cd_pause">일시정지</button>
+          <button class="btn" id="cd-reset" data-i18n="cd_reset">초기화</button>
         </div>
-        <p class="muted">종료 시 화면만으로 알려줍니다(무음). 진동/알림은 선택.</p>
+        <p class="muted" data-i18n="cd_hint">종료 시 화면만으로 알려줍니다(무음). 진동/알림은 선택.</p>
       </div>
     </div>
   </section>
 
   <!-- 현재 시각 표시 카드 -->
   <section class="card" id="now">
-    <h2>현재 시각</h2>
+    <h2 data-i18n="now_title">현재 시각</h2>
     <div id="korea-time" class="clock"></div>
-    <p class="muted">대한민국 표준시 (KST, UTC+9)</p>
+    <p class="muted" data-i18n="now_caption">대한민국 표준시 (KST, UTC+9)</p>
   </section>
 
   <!-- 콘텐츠와 콘텐츠 사이에 ‘1개’만: 과도 노출 방지 -->
   <section class="card">
-    <h2>후원 광고</h2>
+    <h2 data-i18n="ad_title">후원 광고</h2>
     <ins class="adsbygoogle"
         data-ad-client="ca-pub-3600890134957135"
         data-ad-slot="8041446505"
         data-ad-format="auto"
         data-full-width-responsive="true"></ins>
     <script>(adsbygoogle=window.adsbygoogle||[]).push({});</script>
-    <small class="muted">QuietTimer 운영에 도움을 주는 광고입니다.</small>
+    <small class="muted" data-i18n="ad_caption">QuietTimer 운영에 도움을 주는 광고입니다.</small>
   </section>
 
   <section class="card" id="about">
-    <h2>QuietTimer 소개</h2>
-    <p>QuietTimer는 무소음 환경에서 집중할 수 있도록 설계된 무료 온라인 타이머입니다. 브라우저만 있으면 어디서든 사용할 수 있으며, 회원가입이나 설치가 필요 없습니다.</p>
-    <p>모든 기록은 <strong>브라우저 로컬 저장소(LocalStorage)</strong>에만 저장되며 서버로 전송되지 않습니다.</p>
+    <h2 data-i18n="about_title">QuietTimer 소개</h2>
+    <p data-i18n="about_p1">QuietTimer는 무소음 환경에서 집중할 수 있도록 설계된 무료 온라인 타이머입니다. 브라우저만 있으면 어디서든 사용할 수 있으며, 회원가입이나 설치가 필요 없습니다.</p>
+    <p data-i18n="about_p2">모든 기록은 <strong>브라우저 로컬 저장소(LocalStorage)</strong>에만 저장되며 서버로 전송되지 않습니다.</p>
   </section>
 
   <section class="card" id="guide">
-    <h2>사용법</h2>
+    <h2 data-i18n="guide_title">사용법</h2>
     <ol>
-      <li>스톱워치로 공부/업무 시간을 기록합니다.</li>
-      <li>카운트다운으로 목표 시간을 설정하고 집중합니다.</li>
-      <li>랩 기능으로 세부 구간을 관리합니다.</li>
-      <li>기록은 필요 시 CSV로 내보낼 수 있습니다.</li>
+      <li data-i18n="guide_step1">스톱워치로 공부/업무 시간을 기록합니다.</li>
+      <li data-i18n="guide_step2">카운트다운으로 목표 시간을 설정하고 집중합니다.</li>
+      <li data-i18n="guide_step3">랩 기능으로 세부 구간을 관리합니다.</li>
+      <li data-i18n="guide_step4">기록은 필요 시 CSV로 내보낼 수 있습니다.</li>
     </ol>
   </section>
 
   <section class="card" id="faq">
-    <h2>자주 묻는 질문</h2>
-    <h3>기록이 서버로 전송되나요?</h3>
-    <p>아니요. 모든 데이터는 내 장치의 로컬 저장소에만 보관됩니다.</p>
-    <h3>모바일에서도 사용 가능한가요?</h3>
-    <p>네. 최신 모바일 브라우저에서 동일하게 동작합니다.</p>
+    <h2 data-i18n="faq_title">자주 묻는 질문</h2>
+    <h3 data-i18n="faq_q1">기록이 서버로 전송되나요?</h3>
+    <p data-i18n="faq_a1">아니요. 모든 데이터는 내 장치의 로컬 저장소에만 보관됩니다.</p>
+    <h3 data-i18n="faq_q2">모바일에서도 사용 가능한가요?</h3>
+    <p data-i18n="faq_a2">네. 최신 모바일 브라우저에서 동일하게 동작합니다.</p>
   </section>
 </main>
 
 <footer class="row" style="justify-content:space-between">
   <small>© <span id="year"></span> QuietTimer</small>
-  <small><a href="/privacy.html">개인정보처리방침</a> · <a href="/terms.html">이용약관</a> · <a href="/contact.html">문의</a></small>
+  <small>
+    <a href="/privacy.html" data-i18n="footer_privacy">개인정보처리방침</a> ·
+    <a href="/terms.html" data-i18n="footer_terms">이용약관</a> ·
+    <a href="/contact.html" data-i18n="footer_contact">문의</a>
+  </small>
 </footer>
 
 <script>
@@ -229,6 +252,219 @@
   }
   setInterval(renderKoreaTime, 1000);
   renderKoreaTime();
+</script>
+
+<!-- 한·중·일 번역 스크립트 -->
+<script>
+  const i18n = {
+    ko: {
+      _title: "QuietTimer — 무소음 스톱워치 & 카운트다운",
+      _metaDesc: "도서관·스터디룸에서도 쓸 수 있는 무소음 스톱워치/카운트다운. 기록은 로컬에만 저장됩니다.",
+      nav_home: "홈",
+      nav_about: "소개",
+      nav_guide: "사용법",
+      nav_faq: "FAQ",
+      nav_pomodoro: "포모도로",
+      nav_focus: "집중 습관",
+      nav_privacy: "개인정보",
+      nav_terms: "약관",
+      nav_contact: "문의",
+      h1_main: "무소음 타이머",
+      p_subtitle: "소리 없이 작업 시간을 측정하는 스톱워치 & 카운트다운",
+      stopwatch_title: "스톱워치",
+      countdown_title: "카운트다운",
+      task_placeholder: "작업 이름",
+      sw_start: "시작",
+      sw_pause: "일시정지",
+      sw_lap: "랩",
+      sw_reset: "초기화",
+      sw_export: "CSV 내보내기",
+      th_time: "시간",
+      th_lap: "랩",
+      th_at: "작업 시각",
+      label_min: "분",
+      label_sec: "초",
+      label_vibrate: "진동",
+      label_notify: "데스크톱 알림",
+      cd_start: "시작",
+      cd_pause: "일시정지",
+      cd_reset: "초기화",
+      cd_hint: "종료 시 화면만으로 알려줍니다(무음). 진동/알림은 선택.",
+      now_title: "현재 시각",
+      now_caption: "대한민국 표준시 (KST, UTC+9)",
+      ad_title: "후원 광고",
+      ad_caption: "QuietTimer 운영에 도움을 주는 광고입니다.",
+      about_title: "QuietTimer 소개",
+      about_p1: "QuietTimer는 무소음 환경에서 집중할 수 있도록 설계된 무료 온라인 타이머입니다. 브라우저만 있으면 어디서든 사용할 수 있으며, 회원가입이나 설치가 필요 없습니다.",
+      about_p2: "모든 기록은 브라우저 로컬 저장소(LocalStorage)에만 저장되며 서버로 전송되지 않습니다.",
+      guide_title: "사용법",
+      guide_step1: "스톱워치로 공부/업무 시간을 기록합니다.",
+      guide_step2: "카운트다운으로 목표 시간을 설정하고 집중합니다.",
+      guide_step3: "랩 기능으로 세부 구간을 관리합니다.",
+      guide_step4: "기록은 필요 시 CSV로 내보낼 수 있습니다.",
+      faq_title: "자주 묻는 질문",
+      faq_q1: "기록이 서버로 전송되나요?",
+      faq_a1: "아니요. 모든 데이터는 내 장치의 로컬 저장소에만 보관됩니다.",
+      faq_q2: "모바일에서도 사용 가능한가요?",
+      faq_a2: "네. 최신 모바일 브라우저에서 동일하게 동작합니다.",
+      footer_privacy: "개인정보처리방침",
+      footer_terms: "이용약관",
+      footer_contact: "문의"
+    },
+    zh: {
+      _title: "QuietTimer — 无声秒表与倒计时",
+      _metaDesc: "适合在图书馆、自习室使用的无声秒表和倒计时工具。记录仅保存在本地设备中。",
+      nav_home: "首页",
+      nav_about: "介绍",
+      nav_guide: "使用方法",
+      nav_faq: "常见问题",
+      nav_pomodoro: "番茄工作法",
+      nav_focus: "专注习惯",
+      nav_privacy: "隐私政策",
+      nav_terms: "使用条款",
+      nav_contact: "联系我们",
+      h1_main: "无声计时器",
+      p_subtitle: "在安静环境中测量工作时间的无声秒表与倒计时",
+      stopwatch_title: "秒表",
+      countdown_title: "倒计时",
+      task_placeholder: "任务名称",
+      sw_start: "开始",
+      sw_pause: "暂停",
+      sw_lap: "圈数",
+      sw_reset: "重置",
+      sw_export: "导出 CSV",
+      th_time: "时间",
+      th_lap: "圈数",
+      th_at: "记录时间",
+      label_min: "分钟",
+      label_sec: "秒",
+      label_vibrate: "震动",
+      label_notify: "桌面通知",
+      cd_start: "开始",
+      cd_pause: "暂停",
+      cd_reset: "重置",
+      cd_hint: "结束时仅通过画面提示（无声）。震动/通知为可选功能。",
+      now_title: "当前时间",
+      now_caption: "韩国标准时间（KST，UTC+9）",
+      ad_title: "赞助广告",
+      ad_caption: "这些广告有助于支持 QuietTimer 的运营。",
+      about_title: "关于 QuietTimer",
+      about_p1: "QuietTimer 是为安静环境设计的免费在线计时器。有浏览器就可以使用，无需注册或安装。",
+      about_p2: "所有记录仅保存在浏览器的本地存储（LocalStorage）中，不会发送到服务器。",
+      guide_title: "使用方法",
+      guide_step1: "使用秒表记录学习或工作的时间。",
+      guide_step2: "通过倒计时设定目标时间并专注完成。",
+      guide_step3: "利用圈数功能管理细分时间段。",
+      guide_step4: "如有需要，可以将记录导出为 CSV 文件。",
+      faq_title: "常见问题",
+      faq_q1: "记录会被发送到服务器吗？",
+      faq_a1: "不会。所有数据仅保存在你设备的本地存储中。",
+      faq_q2: "可以在手机上使用吗？",
+      faq_a2: "可以。在最新的手机浏览器中也可以正常使用。",
+      footer_privacy: "隐私政策",
+      footer_terms: "使用条款",
+      footer_contact: "联系我们"
+    },
+    ja: {
+      _title: "QuietTimer — 無音ストップウォッチ＆カウントダウン",
+      _metaDesc: "図書館・自習室でも使える無音ストップウォッチ／カウントダウン。記録は端末ローカルのみに保存されます。",
+      nav_home: "ホーム",
+      nav_about: "紹介",
+      nav_guide: "使い方",
+      nav_faq: "FAQ",
+      nav_pomodoro: "ポモドーロ",
+      nav_focus: "集中習慣",
+      nav_privacy: "プライバシー",
+      nav_terms: "利用規約",
+      nav_contact: "お問い合わせ",
+      h1_main: "無音タイマー",
+      p_subtitle: "音を出さずに作業時間を計測できるストップウォッチ＆カウントダウン",
+      stopwatch_title: "ストップウォッチ",
+      countdown_title: "カウントダウン",
+      task_placeholder: "作業名",
+      sw_start: "スタート",
+      sw_pause: "一時停止",
+      sw_lap: "ラップ",
+      sw_reset: "リセット",
+      sw_export: "CSV 書き出し",
+      th_time: "時間",
+      th_lap: "ラップ",
+      th_at: "記録時刻",
+      label_min: "分",
+      label_sec: "秒",
+      label_vibrate: "バイブ",
+      label_notify: "デスクトップ通知",
+      cd_start: "スタート",
+      cd_pause: "一時停止",
+      cd_reset: "リセット",
+      cd_hint: "終了時は画面のみでお知らせします（無音）。バイブ／通知は任意です。",
+      now_title: "現在時刻",
+      now_caption: "韓国標準時（KST, UTC+9）",
+      ad_title: "サポート広告",
+      ad_caption: "QuietTimer の運営を支えてくれる広告です。",
+      about_title: "QuietTimer について",
+      about_p1: "QuietTimer は、静かな環境でも集中できるよう設計された無料のオンラインタイマーです。ブラウザさえあればどこでも使え、登録やインストールは不要です。",
+      about_p2: "すべての記録はブラウザのローカルストレージ（LocalStorage）のみに保存され、サーバーには送信されません。",
+      guide_title: "使い方",
+      guide_step1: "ストップウォッチで勉強・作業時間を記録します。",
+      guide_step2: "カウントダウンで目標時間を設定し、集中して取り組みます。",
+      guide_step3: "ラップ機能で細かい区間を管理します。",
+      guide_step4: "必要に応じて記録を CSV として書き出せます。",
+      faq_title: "よくある質問",
+      faq_q1: "記録はサーバーに送信されますか？",
+      faq_a1: "いいえ。すべてのデータはあなたの端末のローカルストレージにのみ保存されます。",
+      faq_q2: "スマホでも使えますか？",
+      faq_a2: "はい。最新のモバイルブラウザでも同様に動作します。",
+      footer_privacy: "プライバシーポリシー",
+      footer_terms: "利用規約",
+      footer_contact: "お問い合わせ"
+    }
+  };
+
+  function applyLanguage(lang) {
+    const dict = i18n[lang] || i18n.ko;
+
+    // html lang 속성
+    if (lang === 'ko') document.documentElement.lang = 'ko';
+    else if (lang === 'zh') document.documentElement.lang = 'zh-CN';
+    else if (lang === 'ja') document.documentElement.lang = 'ja';
+
+    // title & meta description
+    if (dict._title) document.title = dict._title;
+    if (dict._metaDesc) {
+      const m = document.querySelector('meta[name="description"]');
+      if (m) m.setAttribute('content', dict._metaDesc);
+    }
+
+    // 텍스트 노드
+    document.querySelectorAll('[data-i18n]').forEach(el => {
+      const key = el.dataset.i18n;
+      if (dict[key]) el.textContent = dict[key];
+    });
+
+    // placeholder
+    document.querySelectorAll('[data-i18n-placeholder]').forEach(el => {
+      const key = el.dataset.i18nPlaceholder;
+      if (dict[key]) el.placeholder = dict[key];
+    });
+  }
+
+  function setLanguage(lang) {
+    applyLanguage(lang);
+    try {
+      localStorage.setItem('qt-lang', lang);
+    } catch (e) {}
+  }
+
+  // 첫 로드 시 저장된 언어 적용
+  (function () {
+    let lang = 'ko';
+    try {
+      const stored = localStorage.getItem('qt-lang');
+      if (stored && i18n[stored]) lang = stored;
+    } catch (e) {}
+    applyLanguage(lang);
+  })();
 </script>
 </body>
 </html>
