--- a/guide.html
+++ b/guide.html
@@ -1,1 +1,14 @@
-<!doctype html><html lang="ko"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>사용법 - QuietTimer</title><link rel="canonical" href="https://ranghaesa.github.io/guide.html"></head><body><main style="max-width:900px;margin:24px auto;font-family:system-ui"><h1>사용법</h1><ol><li>스톱워치로 시간 기록</li><li>카운트다운으로 목표 시간 설정</li><li>랩 기능으로 구간 관리</li><li>CSV로 기록 내보내기</li></ol><p><a href="/">← 홈으로</a></p></main></body></html>
+<!doctype html>
+<html lang="ko"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>사용법 - QuietTimer</title><link rel="canonical" href="https://ranghaesa.github.io/guide.html"></head><body><main style="max-width:900px;margin:24px auto;font-family:system-ui"><h1>사용법</h1><ol><li>스톱워치로 시간 기록</li><li>카운트다운으로 목표 시간 설정</li><li>랩 기능으로 구간 관리</li><li>CSV로 기록 내보내기</li></ol><p><a href="/">← 홈으로</a></p></main>
+  <!-- Comment Section -->
+  <section id="comments" style="margin-top:40px;">
+    <script src="https://utteranc.es/client.js"
+          repo="rangHaeSa/ranghaesa.github.io"
+          issue-term="pathname"
+          label="comment"
+          theme="github-light"
+          crossorigin="anonymous"
+          async>
+    </script>
+  </section>
+</body></html>
