Add comment section to FAQ page
Added a comment section using Utterances for user feedback.

--- a/faq.html
+++ b/faq.html
@@ -1,1 +1,13 @@
-<!doctype html><html lang="ko"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>FAQ - QuietTimer</title><link rel="canonical" href="https://ranghaesa.github.io/faq.html"></head><body><main style="max-width:900px;margin:24px auto;font-family:system-ui"><h1>자주 묻는 질문</h1><h3>데이터는 어디에 저장되나요?</h3><p>브라우저 로컬 저장소에만 저장됩니다.</p><h3>모바일 지원?</h3><p>네.</p><p><a href="/">← 홈으로</a></p></main></body></html>
+<!doctype html><html lang="ko"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>FAQ - QuietTimer</title><link rel="canonical" href="https://ranghaesa.github.io/faq.html"></head><body><main style="max-width:900px;margin:24px auto;font-family:system-ui"><h1>자주 묻는 질문</h1><h3>데이터는 어디에 저장되나요?</h3><p>브라우저 로컬 저장소에만 저장됩니다.</p><h3>모바일 지원?</h3><p>네.</p><p><a href="/">← 홈으로</a></p></main>
+  <!-- Comment Section -->
+  <section id="comments" style="margin-top:40px;">
+    <script src="https://utteranc.es/client.js"
+          repo="rangHaeSa/ranghaesa.github.io"
+          issue-term="pathname"
+          label="comment"
+          theme="github-light"
+          crossorigin="anonymous"
+          async>
+    </script>
+  </section>
+</body></html>
