Add comments section with Utterances script
Added a comments section with Utterances integration.

--- a/index.html
+++ b/index.html
@@ -165,7 +165,17 @@
     <p data-i18n="faq_a2">네. 최신 모바일 브라우저에서 동일하게 동작합니다.</p>
   </section>
 </main>
-
+  <!-- Comment Section -->
+  <section id="comments" style="margin-top:40px;">
+    <script src="https://utteranc.es/client.js"
+          repo="rangHaeSa/ranghaesa.github.io"
+          issue-term="pathname"
+          label="comment"
+          theme="github-light"
+          crossorigin="anonymous"
+          async>
+    </script>
+  </section>
 <footer class="row" style="justify-content:space-between">
   <small>© <span id="year"></span> QuietTimer</small>
   <small>
